Connor
[gd_scene load_steps=17 format=3 uid="uid://jqs4x5k71n0l"]


[ext_resource type="Texture2D" uid="uid://b86t3r7hqhf31" path="res://Textures/dungeon_backgroundDark.jpg" id="1_2lg5k"]
[ext_resource type="Script" uid="uid://sem6e4mjw04" path="res://Rooms/room_R1U1.gd" id="1_w7c1r"]
[ext_resource type="PackedScene" uid="uid://bt1y1u8tsrjn1" path="res://player.tscn" id="2_w7c1r"]
[ext_resource type="Texture2D" uid="uid://bsko2oiy8gyff" path="res://Textures/dungeon_wallDark_long.jpg" id="3_13ewv"]
[ext_resource type="Texture2D" uid="uid://8qina2j1kpyd" path="res://Textures/stairBottom.jpg" id="3_67j5d"]
[ext_resource type="Texture2D" uid="uid://d18243pf1s30d" path="res://Textures/dungeon_wallDark.jpg" id="4_nwcen"]
[ext_resource type="Texture2D" uid="uid://cpu7bw0cancdb" path="res://Textures/stairTop.jpg" id="5_hdjkt"]
[ext_resource type="PackedScene" uid="uid://bsqixovrqmxws" path="res://pause_button.tscn" id="6_4augu"]
[ext_resource type="PackedScene" path="res://health.tscn" id="7_obyre"]
[ext_resource type="PackedScene" uid="uid://b48fjx60a3lpv" path="res://pause_menu.tscn" id="8_67j5d"]
[ext_resource type="Texture2D" uid="uid://dnkluqtc2jkk" path="res://Icons/reset-svgrepo-com.svg" id="9_hdjkt"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_13ewv"]
size = Vector2(61, 100)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_w7c1r"]
size = Vector2(106, 54)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_67j5d"]
size = Vector2(8, 67)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ml6bw"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rmv7b"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[node name="RoomR1U1" type="Node2D"]
script = ExtResource("1_w7c1r")

[node name="floor" type="Node2D" parent="."]

[node name="TextureRect" type="TextureRect" parent="floor"]
offset_right = 1151.0
offset_bottom = 650.0
scale = Vector2(1.00078, 0.997254)
texture = ExtResource("1_2lg5k")

[node name="TextureRect15" type="TextureRect" parent="."]
offset_left = 661.0
offset_top = 271.0
offset_right = 1020.0
offset_bottom = 676.0
rotation = 1.57079
scale = Vector2(0.445447, 0.490301)
texture = ExtResource("3_67j5d")

[node name="Player" parent="." instance=ExtResource("2_w7c1r")]
position = Vector2(27, 118)

[node name="TextureRect16" type="TextureRect" parent="."]
offset_left = 692.0
offset_top = 271.0
offset_right = 1051.0
offset_bottom = 330.0
rotation = 1.57079
scale = Vector2(0.445447, 0.530301)
texture = ExtResource("5_hdjkt")

[node name="TextureRect16" type="TextureRect" parent="."]
offset_left = 692.0
offset_top = 271.0
offset_right = 1051.0
offset_bottom = 330.0
rotation = 1.57079
scale = Vector2(0.445447, 0.530301)
texture = ExtResource("5_hdjkt")

[node name="wall" type="Node2D" parent="."]

[node name="TextureRect" type="TextureRect" parent="wall"]
offset_left = 57.0
offset_top = 164.0
offset_right = 580.0
offset_bottom = 218.0
rotation = 1.5708
scale = Vector2(0.925391, 1.05451)
texture = ExtResource("3_13ewv")

[node name="TextureRect6" type="TextureRect" parent="wall"]
offset_left = 1093.0
offset_top = 486.0
offset_right = 1183.0
offset_bottom = 774.0
scale = Vector2(0.653761, 0.561131)
texture = ExtResource("4_nwcen")
flip_v = true

[node name="TextureRect5" type="TextureRect" parent="wall"]
offset_left = 1152.0
offset_top = 55.0
offset_right = 1675.0
offset_bottom = 109.0
rotation = 1.5708
scale = Vector2(0.925482, 1.08445)
texture = ExtResource("3_13ewv")

[node name="TextureRect2" type="TextureRect" parent="wall"]
offset_right = 523.0
offset_bottom = 54.0
scale = Vector2(0.991878, 1.01093)
texture = ExtResource("3_13ewv")

[node name="TextureRect11" type="TextureRect" parent="wall"]
offset_left = 748.0
offset_top = 485.0
offset_right = 1271.0
offset_bottom = 539.0
rotation = -3.14159
scale = Vector2(0.989972, 1.01469)
texture = ExtResource("3_13ewv")

[node name="TextureRect13" type="TextureRect" parent="wall"]
offset_left = 403.0
offset_top = 216.0
offset_right = 926.0
offset_bottom = 270.0
scale = Vector2(0.989243, 1.02129)
texture = ExtResource("3_13ewv")

[node name="TextureRect10" type="TextureRect" parent="wall"]
offset_left = 230.0
offset_right = 753.0
offset_bottom = 54.0
rotation = 1.5708
scale = Vector2(0.929821, 1.09384)
texture = ExtResource("3_13ewv")

[node name="TextureRect3" type="TextureRect" parent="wall"]
offset_left = 518.0
offset_right = 1041.0
offset_bottom = 54.0
scale = Vector2(0.991878, 1.01093)
texture = ExtResource("3_13ewv")
flip_v = true

[node name="TextureRect8" type="TextureRect" parent="wall"]
offset_left = 344.0
offset_top = 593.0
offset_right = 867.0
offset_bottom = 647.0
scale = Vector2(0.991878, 1.01093)
texture = ExtResource("3_13ewv")
flip_v = true

[node name="TextureRect9" type="TextureRect" parent="wall"]
offset_left = 57.0
offset_top = 592.0
offset_right = 580.0
offset_bottom = 646.0
scale = Vector2(0.991878, 1.01093)
texture = ExtResource("3_13ewv")
flip_v = true

[node name="TextureRect4" type="TextureRect" parent="wall"]
offset_left = 974.0
offset_top = 55.0
offset_right = 1064.0
offset_bottom = 343.0
rotation = -1.5708
scale = Vector2(0.610448, 0.617834)
texture = ExtResource("4_nwcen")
flip_v = true

[node name="TextureRect12" type="TextureRect" parent="wall"]
offset_left = 749.0
offset_top = 431.0
offset_right = 839.0
offset_bottom = 719.0
rotation = -3.14159
scale = Vector2(0.647156, 0.55254)
texture = ExtResource("4_nwcen")
flip_v = true

[node name="TextureRect14" type="TextureRect" parent="wall"]
offset_left = 1094.0
offset_top = 431.0
offset_right = 1184.0
offset_bottom = 719.0
rotation = -4.71239
scale = Vector2(0.596822, 0.601528)
texture = ExtResource("4_nwcen")
flip_h = true

[node name="TextureRect7" type="TextureRect" parent="wall"]
offset_left = 976.0
offset_top = 648.0
offset_right = 1066.0
offset_bottom = 936.0
rotation = -1.5708
scale = Vector2(0.612864, 0.610975)
texture = ExtResource("4_nwcen")
flip_v = true

[node name="SpawnR1" type="Marker2D" parent="."]
position = Vector2(920, 619)

[node name="SpawnU1" type="Marker2D" parent="."]
position = Vector2(26, 115)

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-34, 106)
shape = SubResource("RectangleShape2D_13ewv")

[node name="Area2D2" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2"]
position = Vector2(920, 677)
shape = SubResource("RectangleShape2D_w7c1r")

[node name="Area2D3" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D3"]
position = Vector2(741, 352)
shape = SubResource("RectangleShape2D_67j5d")

[node name="pause_button" parent="." instance=ExtResource("6_4augu")]
offset_left = 1107.0
offset_top = 9.0
offset_right = 1107.0
offset_bottom = 9.0

[node name="Pause_menu" parent="." instance=ExtResource("8_67j5d")]
visible = false
z_index = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 545.0
offset_top = 284.0
offset_right = 545.0
offset_bottom = 284.0
scale = Vector2(0.960175, 1.01674)
size_flags_vertical = 4

[node name="reset" type="Button" parent="."]
offset_left = 1048.0
offset_top = 11.0
offset_right = 1848.0
offset_bottom = 811.0
scale = Vector2(0.0428735, 0.0405039)
theme_override_styles/hover = SubResource("StyleBoxFlat_ml6bw")
theme_override_styles/normal = SubResource("StyleBoxFlat_rmv7b")
icon = ExtResource("9_hdjkt")

[node name="Health" parent="." instance=ExtResource("7_obyre")]
unique_name_in_owner = true
position = Vector2(64, 41)

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StaticBody2D"]
Connor
polygon = PackedVector2Array(0, -3, -1, 51, 167, 48, 170, 485, 750, 491, 748, 272, 921, 271, 921, 215, 404, 216, 404, 272, 462.617, 272, 462, 289, 665.36, 313.606, 741, 306, 742, 394, 665.063, 387.894, 460, 411, 461, 431, 233, 428, 233, 51, 1097, 56, 1097, 428, 921, 429, 918, 488, 1094, 486, 1097, 596, 975, 592, 977, 706, 867, 706, 862, 595, 56, 595, 56, 163, -15, 163, -78, 158, -72, 53, -3, 51, -72, 19, -122, 158, -3, 649, 799, 647, 807, 753, 1044, 761, 1032, 647, 1155, 652, 1155, -1)


[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_entered" from="Area2D2" to="." method="_on_area_2d_2_body_entered"]
[connection signal="body_entered" from="Area2D3" to="." method="_on_area_2d_3_body_entered"]
[connection signal="pressed" from="reset" to="." method="_on_reset_pressed"]
